--- a/css/main.css
+++ b/css/main.css
@@ -50,8 +50,8 @@ header {
     display: flex;
     padding-inline: calc(25vw - 10rem);
     height: 4rem;
-    background-color: var(--color-primary);
-    color: var(--color-on-primary);
+    background: var(--color-primary); /* Use gradient background */
+    color: var(--color-on-primary); /* Solid color for text */
 }
 @media screen and (min-width: 1366px) {
     header {
