--- a/css/main.css
+++ b/css/main.css
@@ -3,8 +3,8 @@
     --color-on-background: black;
     --color-background-hover: #eee;
     --color-on-background-hover: black;
-    --color-primary: linear-gradient(45deg, #ec7063, #ff9a76); /* Gradient for background */
-    --color-on-primary: white; /* Solid color for text on primary background */
+    --color-primary: #ec7063;
+    --color-on-primary: white;
     --color-error: #de0000;
     --color-on-error: white;
 }
@@ -16,9 +16,9 @@ header.dark {
     --color-on-background: white;
     --color-background-hover: #27262c;
     --color-on-background-hover: white;
-    --color-primary: linear-gradient(45deg, #283593, #5c6bc0); /* Gradient for dark mode */
+    --color-primary: #283593;
     --color-primary-disabled: #1f213c;
-    --color-on-primary: white; /* Solid color for text on dark primary background */
+    --color-on-primary: white;
     --color-error: #de0000;
     --color-on-error: white;
 }
@@ -50,8 +50,8 @@ header {
     display: flex;
     padding-inline: calc(25vw - 10rem);
     height: 4rem;
-    background: var(--color-primary); /* Use gradient background */
-    color: var(--color-on-primary); /* Solid color for text */
+    background-color: var(--color-primary);
+    color: var(--color-on-primary);
 }
 @media screen and (min-width: 1366px) {
     header {
